# C_picProcessor

./: .gitignore  CMakeLists.txt  Main.c  Makefile  PicProcess.c  PicProcess.h  Picture.c  Picture.h  Utils.c  Utils.h
